--- a/SimpleandCompoundInterest/SimpleandCompoundInterest.csproj
+++ b/SimpleandCompoundInterest/SimpleandCompoundInterest.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\simpleCompoundInterest\simpleCompoundInterest.csproj" />
+  </ItemGroup>
+
 </Project>
